--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -53,7 +53,17 @@
     "🎂 Today's baby is *{{name}}* who turns {{age}} years old! 🥳🎉 Congratulations {{name}} ❤️",
     "🎂 Today is *{{name}}*'s day who celebrates {{age}} years! 🥳🎉 Congratulations {{name}} ❤️",
     "🎂 What an epic day! *{{name}}* turns {{age}} years old today! 🥳🎉 Congratulations {{name}} ❤️",
-    "🎂 Our *{{name}}* turns {{age}} years old today! 🥳🎉 Congratulations {{name}} ❤️"
+    "🎂 Our *{{name}}* turns {{age}} years old today! 🥳🎉 Congratulations {{name}} ❤️",
+    "🎂 Hip hip hooray! {{name}} is now {{age}} years old! 🥳🎉 Cheers to you, {{name}} ❤️",
+    "🎂 A big shoutout to {{name}} who is celebrating {{age}} years today! 🥳🎉 Congrats, {{name}} ❤️",
+    "🎂 Let's celebrate {{name}} who is turning {{age}} years old today! 🥳🎉 Happy Birthday, {{name}} ❤️",
+    "🎂 Happy Birthday to the amazing {{name}}! Today you turn {{age}} years old! 🥳🎉 Enjoy your day, {{name}} ❤️",
+    "🎂 Join us in celebrating {{name}}'s {{age}}th birthday today! 🥳🎉 Best wishes, {{name}} ❤️",
+    "🎂 It's a special day for {{name}} who turns {{age}} today! 🥳🎉 Happy Birthday, {{name}} ❤️",
+    "🎂 Let's raise a toast to {{name}} on their {{age}}th birthday! 🥳🎉 Cheers, {{name}} ❤️",
+    "🎂 Today we celebrate {{name}} reaching {{age}} years! 🥳🎉 Happy Birthday, {{name}} ❤️",
+    "🎂 Wishing {{name}} a fantastic {{age}}th birthday today! 🥳🎉 Enjoy every moment, {{name}} ❤️",
+    "🎂 It's {{name}}'s big day! {{age}} years and counting! 🥳🎉 Happy Birthday, {{name}} ❤️"
   ],
   "words": {
     "days": "days",
@@ -65,5 +75,5 @@
   "helpMessage": "Here are the commands you can use:\n - /add - Add a new birthday with the name and date separated by a comma (eg, `/add Samuel, 1994-03-21`)\n - /remove - Remove a birthday (eg, `/remove David`)\n - /birthdays - Lists everyone's birthdays, sorted by the nearest date.\n - /ages - Lists everyone, sorted by age.\n - /next - Shows who has the next upcoming birthday!\n - /birthdaybot - Tell the bot what you want it to do (eg, `/birthdaybot add Peter on April 15, 1980`).\n - /config - Shows the current configuration for this group. If you are an admin, you can change it by separating the key and value with a comma. (eg, `/config language, en`)",
   "unborn": "unborn",
   "inputNeeded": "Yes?...",
-  "configMessage": "Here's this the group's configuration:\n \\- `language`:  *{{language}}*\n \\- `notificationHour`: The earliest \\(24h format\\) the bot will send birthday notifications: *{{notificationHour}}h*\n \\- `restrictedToAdmins`: Whether managing birthdays is limited to group administrators: *{{restrictedToAdmins}}*\n"
+  "configMessage": "Here's this the group's configuration:\n \\- `language`:  *{{language}}*\n \\- `notificationHour`: The earliest \\(24h format\\) the bot will send birthday notifications: *{{notificationHour}}h* (UTC)\n \\- `restrictedToAdmins`: Whether managing birthdays is limited to group administrators: *{{restrictedToAdmins}}*\n"
 }
